# mursst-icechunk-updater

./: .env  .gitignore  .pre-commit-config.yaml  README.md  cdk.json  config.py.example  create_queue.py  main.py  pyproject.toml  requirements.txt  subscribe.py
.github/workflows/: check-requirements.yml  deploy.yml  integration-tests.yml  lambda-invocation-test.yml  lambda_invocation_test.yaml  lambda_test.yaml  lambda_test_monitoring.yaml  main.yml  rebuild_store.yml  tests.yml
cdk/: README.md  app.py  mursst_stack.py  requirements.txt  settings.py  stack.py
cdk/aws_lambda/: Dockerfile  lambda_function.py  requirements.txt
cdk/lambda/: Dockerfile  lambda_function.py  requirements.txt  testing.ipynb
notebooks/: coding_club_demo.ipynb  hub_test.ipynb  local_dev.ipynb  local_test.ipynb  test_read_production.ipynb  testing.ipynb
scripts/: bootstrap_dotenv.sh  build_store.py  rebuild_store.py  rebuild_store_with_vz2_ic1.py  sync_requirements.sh
src/: Dockerfile  exceptions.py  function.Dockerfile  lambda_function.py  layer.Dockerfile  requirements.txt  settings.py  updater.py
tests/: test_base.py  test_integration_in_region.py  test_integration_local.py  test_unit.py
